[gd_scene load_steps=2 format=3 uid="uid://dc48d4qx0qx2n"]

[ext_resource type="Script" uid="uid://c58gcmwiergpn" path="res://scripts/characters/third_person_camera.gd" id="1_38il2"]

[node name="CameraSystem" type="Node3D"]
script = ExtResource("1_38il2")
spring_length = 5.0

[node name="HorizontalPivot" type="Node3D" parent="."]

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]

[node name="SpringArm3D" type="SpringArm3D" parent="HorizontalPivot/VerticalPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.29485, 0)

[node name="Camera" type="Camera3D" parent="HorizontalPivot/VerticalPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)
current = true
